// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Foundation/Buttons Disabled 1`] = `
<View
  color="background.primary"
  flex={1}
  p={15.714285714285714}
  style={
    Array [
      Object {
        "color": "#ffffff",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingBottom": 15.714285714285714,
        "paddingLeft": 15.714285714285714,
        "paddingRight": 15.714285714285714,
        "paddingTop": 15.714285714285714,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={false}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "opacity": 1,
          "paddingBottom": 15,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 15,
        }
      }
    >
      <Text
        color="font.primary"
        style={
          Array [
            Object {
              "color": "#1b1f23",
            },
          ]
        }
      >
        Disabled
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Foundation/Buttons Primary 1`] = `
<View
  color="background.primary"
  flex={1}
  p={15.714285714285714}
  style={
    Array [
      Object {
        "color": "#ffffff",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingBottom": 15.714285714285714,
        "paddingLeft": 15.714285714285714,
        "paddingRight": 15.714285714285714,
        "paddingTop": 15.714285714285714,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={false}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "opacity": 1,
          "paddingBottom": 15,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 15,
        }
      }
    >
      <Text
        color="white"
        style={
          Array [
            Object {
              "color": "white",
            },
          ]
        }
      >
        Primary
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Foundation/Buttons Secondary 1`] = `
<View
  color="background.primary"
  flex={1}
  p={15.714285714285714}
  style={
    Array [
      Object {
        "color": "#ffffff",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingBottom": 15.714285714285714,
        "paddingLeft": 15.714285714285714,
        "paddingRight": 15.714285714285714,
        "paddingTop": 15.714285714285714,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={false}
      nativeID="animatedComponent"
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "opacity": 1,
          "paddingBottom": 15,
          "paddingLeft": 15,
          "paddingRight": 15,
          "paddingTop": 15,
        }
      }
    >
      <Text
        color="font.primary"
        style={
          Array [
            Object {
              "color": "#1b1f23",
            },
          ]
        }
      >
        Secondary
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Foundation/Typography Defaults 1`] = `
<View
  color="background.primary"
  flex={1}
  p={15.714285714285714}
  style={
    Array [
      Object {
        "color": "#ffffff",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingBottom": 15.714285714285714,
        "paddingLeft": 15.714285714285714,
        "paddingRight": 15.714285714285714,
        "paddingTop": 15.714285714285714,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      color="background.primary"
      style={
        Array [
          Object {
            "color": "#ffffff",
          },
        ]
      }
    >
      <Text
        color="font.primary"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#1b1f23",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        This is LargeTitle
      </Text>
      <Text
        color="font.primary"
        fontFamily="bold"
        fontSize="title1"
        style={
          Array [
            Object {
              "color": "#1b1f23",
              "fontFamily": "Inter-Bold",
              "fontSize": 37.714285714285715,
            },
          ]
        }
      >
        This is Title1
      </Text>
      <Text
        color="font.primary"
        fontFamily="bold"
        fontSize="title2"
        style={
          Array [
            Object {
              "color": "#1b1f23",
              "fontFamily": "Inter-Bold",
              "fontSize": 28.285714285714285,
            },
          ]
        }
      >
        This is Title2
      </Text>
      <Text
        color="font.primary"
        fontFamily="regular"
        fontSize="body"
        style={
          Array [
            Object {
              "color": "#1b1f23",
              "fontFamily": "Inter-Regular",
              "fontSize": 22,
            },
          ]
        }
      >
        This is Body
      </Text>
      <Text
        color="font.primary"
        fontFamily="regular"
        fontSize="caption1"
        style={
          Array [
            Object {
              "color": "#1b1f23",
              "fontFamily": "Inter-Regular",
              "fontSize": 18.857142857142858,
            },
          ]
        }
      >
        This is Caption1
      </Text>
      <Text
        color="font.primary"
        fontFamily="regular"
        fontSize="caption2"
        style={
          Array [
            Object {
              "color": "#1b1f23",
              "fontFamily": "Inter-Regular",
              "fontSize": 15.714285714285714,
            },
          ]
        }
      >
        This is Caption2
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Foundation/Typography Font Colors 1`] = `
<View
  color="background.primary"
  flex={1}
  p={15.714285714285714}
  style={
    Array [
      Object {
        "color": "#ffffff",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingBottom": 15.714285714285714,
        "paddingLeft": 15.714285714285714,
        "paddingRight": 15.714285714285714,
        "paddingTop": 15.714285714285714,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      color="background.primary"
      style={
        Array [
          Object {
            "color": "#ffffff",
          },
        ]
      }
    >
      <View
        backgroundColor="background.base"
        color="background.primary"
        style={
          Array [
            Object {
              "backgroundColor": "#2f3941",
              "color": "#ffffff",
            },
          ]
        }
      >
        <Text
          color="font.white"
          fontFamily="bold"
          fontSize="largeTitle"
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "Inter-Bold",
                "fontSize": 50.285714285714285,
              },
            ]
          }
        >
          White
        </Text>
      </View>
      <Text
        color="font.black"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#000000",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Black
      </Text>
      <Text
        color="font.base"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#2f3941",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Base
      </Text>
      <Text
        color="font.primary"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#1b1f23",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Primary
      </Text>
      <Text
        color="font.secondary"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#828282",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Secondary
      </Text>
      <Text
        color="font.danger"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#ff6969",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Danger
      </Text>
      <Text
        color="font.grey100"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#f8f9f9",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Grey
      </Text>
      <Text
        color="font.grey100"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#f8f9f9",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Grey 100
      </Text>
      <Text
        color="font.grey200"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#e9ebed",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Grey 200
      </Text>
      <Text
        color="font.grey300"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#d8dcde",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Grey 300
      </Text>
      <Text
        color="font.grey400"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#c2c8cc",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Grey 400
      </Text>
      <Text
        color="font.grey500"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#87929d",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Grey 500
      </Text>
      <Text
        color="font.grey600"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#68737d",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Grey 600
      </Text>
      <Text
        color="font.grey800"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#2f3941",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Grey 800
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Foundation/Typography Font Families 1`] = `
<View
  color="background.primary"
  flex={1}
  p={15.714285714285714}
  style={
    Array [
      Object {
        "color": "#ffffff",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "paddingBottom": 15.714285714285714,
        "paddingLeft": 15.714285714285714,
        "paddingRight": 15.714285714285714,
        "paddingTop": 15.714285714285714,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "flex": 1,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      color="background.primary"
      style={
        Array [
          Object {
            "color": "#ffffff",
          },
        ]
      }
    >
      <Text
        color="font.primary"
        fontFamily="regular"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#1b1f23",
              "fontFamily": "Inter-Regular",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Regular(weight:400)
      </Text>
      <Text
        color="font.primary"
        fontFamily="bold"
        fontSize="largeTitle"
        style={
          Array [
            Object {
              "color": "#1b1f23",
              "fontFamily": "Inter-Bold",
              "fontSize": 50.285714285714285,
            },
          ]
        }
      >
        Bold(weight:700)
      </Text>
    </View>
  </View>
</View>
`;
